@@ -41,9 +41,13 @@
 #endif
 void __cprintf(const char *_Nonnull buf);
 void __cfprintf(FILE *_Nonnull stream, const char *_Nonnull buf);
-size_t cprintf_get_bufsize(const char *_Nonnull format, ...);
+// Get the size of the string to print.
+// We give another 514 bytes to avoid buffer overflow.
+// We call snprintf() twice, but never mind, it's fast enough.
+#define cprintf_get_bufsize(format, ...) (snprintf(NULL, 0, format, ##__VA_ARGS__)>0?snprintf(NULL, 0, format, ##__VA_ARGS__)+514:0)
 // The `base` color.
-#define CPRINTF_BASE_COLOR "\033[1;38;2;254;228;208m"
+#define CPRINTF_BASE_FG_COLOR "\033[1;38;2;254;228;208m"
+#define CPRINTF_BASE_BG_COLOR "\033[1;48;2;254;228;208m"
 /*
  * cprintf() is a macro,
  * first, we get the size of the string to print,
@@ -54,19 +58,23 @@ size_t cprintf_get_bufsize(const char *_Nonnull format, ...);
 	{                                                                    \
 		char *__cprintf_buf = NULL;                                  \
 		size_t bufsize = cprintf_get_bufsize(format, ##__VA_ARGS__); \
-		__cprintf_buf = malloc(bufsize);                             \
-		sprintf(__cprintf_buf, format, ##__VA_ARGS__);               \
-		__cprintf(__cprintf_buf);                                    \
-		free(__cprintf_buf);                                         \
+		if (bufsize != 0) {                                          \
+			__cprintf_buf = malloc(bufsize);                     \
+			sprintf(__cprintf_buf, format, ##__VA_ARGS__);       \
+			__cprintf(__cprintf_buf);                            \
+			free(__cprintf_buf);                                 \
+		}                                                            \
 	}
 #define cfprintf(stream, format, ...)                                        \
 	{                                                                    \
 		char *__cprintf_buf = NULL;                                  \
 		size_t bufsize = cprintf_get_bufsize(format, ##__VA_ARGS__); \
-		__cprintf_buf = malloc(bufsize);                             \
-		sprintf(__cprintf_buf, format, ##__VA_ARGS__);               \
-		__cfprintf(stream, __cprintf_buf);                           \
-		free(__cprintf_buf);                                         \
+		if (bufsize != 0) {                                          \
+			__cprintf_buf = malloc(bufsize);                     \
+			sprintf(__cprintf_buf, format, ##__VA_ARGS__);       \
+			__cfprintf(stream, __cprintf_buf);                   \
+			free(__cprintf_buf);                                 \
+		}                                                            \
 	}
 #define CPRINTF_MAJOR 1
-#define CPRINTF_MINOR 1
+#define CPRINTF_MINOR 3
